--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
       <a href="#inicio">Inicio</a>
       <a href="#nosotros">Quiénes Somos</a>
       <a href="#servicios">Servicios</a>
+<p>
+  En NovaTrade Logistics ofrecemos servicios integrales de gestión logística internacional,
+  orientados a operaciones de importación, exportación y tránsito,
+  brindando coordinación, seguimiento y asesoría durante todo el proceso.
+</p>
+
       <a href="#proceso">Cómo Trabajamos</a>
       <a href="#contacto">Contacto</a>
     </div>
