--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       font-family: Arial, Helvetica, sans-serif;
       background-color: #f4f6f8;
       color: #333;
+      line-height: 1.6;
     }
 
     header {
@@ -19,58 +20,56 @@
       display: flex;
       align-items: center;
       border-bottom: 1px solid #ddd;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
 
-    header img {
-      height: 60px;
+    .logo {
+      display: flex;
+      align-items: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: #003366;
+    }
+
+    .logo svg {
+      width: 48px;
+      height: 48px;
+      margin-right: 12px;
     }
 
     nav {
       margin-left: auto;
-      display: flex;
-      align-items: center;
     }
 
-    nav button {
-      background: none;
-      border: none;
+    nav a, nav button {
       margin-left: 20px;
-      font-size: 16px;
-      cursor: pointer;
+      font-size: 15px;
       color: #003366;
       font-weight: bold;
+      text-decoration: none;
+      background: none;
+      border: none;
+      cursor: pointer;
     }
 
-    nav button:hover {
+    nav a:hover, nav button:hover {
       text-decoration: underline;
-    }
-
-    .lang-switch {
-      margin-left: 30px;
-      font-size: 14px;
-    }
-
-    .lang-switch button {
-      font-size: 14px;
-      margin-left: 5px;
     }
 
     .container {
       max-width: 1000px;
-      margin: 40px auto;
+      margin: 50px auto;
       padding: 0 20px;
     }
 
-    .section {
-      display: none;
+    section {
       background-color: #ffffff;
-      padding: 30px;
+      padding: 40px;
+      margin-bottom: 40px;
       border-radius: 6px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-
-    .section.active {
-      display: block;
     }
 
     h1, h2 {
@@ -78,11 +77,12 @@
     }
 
     footer {
-      margin-top: 60px;
-      padding: 20px;
+      background-color: #ffffff;
+      padding: 25px;
       text-align: center;
       font-size: 14px;
       color: #777;
+      border-top: 1px solid #ddd;
     }
   </style>
 </head>
@@ -90,77 +90,66 @@
 <body>
 
 <header>
-  <img src="logo.png" alt="NovaTrade Logistics">
+  <!-- LOGO VISIBLE -->
+  <div class="logo">
+    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+      <rect x="5" y="5" width="90" height="90" rx="12" fill="#003366"/>
+      <text x="50" y="60" text-anchor="middle" font-size="42" fill="#ffffff" font-family="Arial" font-weight="bold">
+        NT
+      </text>
+    </svg>
+    NovaTrade Logistics
+  </div>
 
   <nav>
-    <button onclick="showSection('inicio')">Inicio</button>
-    <button onclick="showSection('servicios')">Servicios</button>
-    <button onclick="showSection('nosotros')">Nosotros</button>
-    <button onclick="showSection('contacto')">Contacto</button>
+    <a href="#inicio">Inicio</a>
+    <a href="#servicios">Servicios</a>
+    <a href="#nosotros">Nosotros</a>
+    <a href="#contacto">Contacto</a>
 
-    <div class="lang-switch">
-      <button onclick="setLanguage('es')">ES</button> |
-      <button onclick="setLanguage('en')">EN</button>
-    </div>
+    <button onclick="setLanguage('es')">ES</button> |
+    <button onclick="setLanguage('en')">EN</button>
   </nav>
 </header>
 
 <div class="container">
 
-  <div id="inicio" class="section active">
+  <section id="inicio">
     <h1 data-es="Bienvenidos a NovaTrade Logistics"
         data-en="Welcome to NovaTrade Logistics"></h1>
+
     <p data-es="Somos una empresa enfocada en brindar soluciones eficientes en gestión logística internacional, actuando como un único punto de contacto para nuestros clientes."
        data-en="We are a company focused on providing efficient international logistics management solutions, acting as a single point of contact for our clients."></p>
-  </div>
+  </section>
 
-  <div id="servicios" class="section">
+  <section id="servicios">
     <h2 data-es="Servicios"
         data-en="Services"></h2>
-    <p data-es="Ofrecemos servicios integrales de gestión logística internacional para operaciones de importación, exportación y tránsito, brindando coordinación, tracking y asesoría durante todo el proceso."
-       data-en="We provide comprehensive international logistics management services for import, export, and transit operations, offering coordination, tracking, and advisory support throughout the process."></p>
-  </div>
 
-  <div id="nosotros" class="section">
+    <p data-es="Ofrecemos servicios integrales de gestión logística internacional para operaciones de importación, exportación y tránsito, brindando coordinación, seguimiento y asesoría durante todo el proceso."
+       data-en="We provide comprehensive international logistics management services for import, export, and transit operations, offering coordination, tracking, and advisory support throughout the process."></p>
+  </section>
+
+  <section id="nosotros">
     <h2 data-es="Quiénes Somos"
         data-en="About Us"></h2>
+
     <p data-es="NovaTrade Logistics acompaña a empresas y personas en sus operaciones de comercio internacional mediante una gestión profesional, clara y confiable."
        data-en="NovaTrade Logistics supports companies and individuals in their international trade operations through professional, clear, and reliable management."></p>
-  </div>
+  </section>
 
-  <div id="contacto" class="section">
+  <section id="contacto">
     <h2 data-es="Contacto"
         data-en="Contact"></h2>
+
     <p>
       <strong>Email:</strong> novaatradelogistics@gmail.com<br>
       <strong>WhatsApp:</strong> (+502) 5471-8568
     </p>
-  </div>
+  </section>
 
 </div>
 
-<footer data-es="© 2025 NovaTrade Logistics · Gestión logística internacional"
-        data-en="© 2025 NovaTrade Logistics · International logistics management">
-</footer>
-
-<script>
-  function showSection(sectionId) {
-    document.querySelectorAll('.section').forEach(section => {
-      section.classList.remove('active');
-    });
-    document.getElementById(sectionId).classList.add('active');
-  }
-
-  function setLanguage(lang) {
-    document.documentElement.lang = lang;
-    document.querySelectorAll('[data-es]').forEach(el => {
-      el.textContent = el.getAttribute('data-' + lang);
-    });
-  }
-
-  // Idioma por defecto: Español
-  setLanguage('es');
-</script>
-
-</body>
-</html>
+<footer
+  data-es="© 2025 NovaTrade Logistics · Gestión logística internacional"
+  data-en="©
