--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
 <body>
 
 <header>
-  <!-- LOGO VISIBLE -->
   <div class="logo">
     <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
       <rect x="5" y="5" width="90" height="90" rx="12" fill="#003366"/>
@@ -115,32 +114,33 @@
 <div class="container">
 
   <section id="inicio">
-    <h1 data-es="Bienvenidos a NovaTrade Logistics"
-        data-en="Welcome to NovaTrade Logistics"></h1>
+    <h1 data-en="Welcome to NovaTrade Logistics">
+      Bienvenidos a NovaTrade Logistics
+    </h1>
 
-    <p data-es="Somos una empresa enfocada en brindar soluciones eficientes en gestión logística internacional, actuando como un único punto de contacto para nuestros clientes."
-       data-en="We are a company focused on providing efficient international logistics management solutions, acting as a single point of contact for our clients."></p>
+    <p data-en="We are a company focused on providing efficient international logistics management solutions, acting as a single point of contact for our clients.">
+      Somos una empresa enfocada en brindar soluciones eficientes en gestión logística internacional, actuando como un único punto de contacto para nuestros clientes.
+    </p>
   </section>
 
   <section id="servicios">
-    <h2 data-es="Servicios"
-        data-en="Services"></h2>
+    <h2 data-en="Services">Servicios</h2>
 
-    <p data-es="Ofrecemos servicios integrales de gestión logística internacional para operaciones de importación, exportación y tránsito, brindando coordinación, seguimiento y asesoría durante todo el proceso."
-       data-en="We provide comprehensive international logistics management services for import, export, and transit operations, offering coordination, tracking, and advisory support throughout the process."></p>
+    <p data-en="We provide comprehensive international logistics management services for import, export, and transit operations, offering coordination, tracking, and advisory support throughout the process.">
+      Ofrecemos servicios integrales de gestión logística internacional para operaciones de importación, exportación y tránsito, brindando coordinación, seguimiento y asesoría durante todo el proceso.
+    </p>
   </section>
 
   <section id="nosotros">
-    <h2 data-es="Quiénes Somos"
-        data-en="About Us"></h2>
+    <h2 data-en="About Us">Quiénes Somos</h2>
 
-    <p data-es="NovaTrade Logistics acompaña a empresas y personas en sus operaciones de comercio internacional mediante una gestión profesional, clara y confiable."
-       data-en="NovaTrade Logistics supports companies and individuals in their international trade operations through professional, clear, and reliable management."></p>
+    <p data-en="NovaTrade Logistics supports companies and individuals in their international trade operations through professional, clear, and reliable management.">
+      NovaTrade Logistics acompaña a empresas y personas en sus operaciones de comercio internacional mediante una gestión profesional, clara y confiable.
+    </p>
   </section>
 
   <section id="contacto">
-    <h2 data-es="Contacto"
-        data-en="Contact"></h2>
+    <h2 data-en="Contact">Contacto</h2>
 
     <p>
       <strong>Email:</strong> novaatradelogistics@gmail.com<br>
@@ -151,5 +151,24 @@
 </div>
 
 <footer
-  data-es="© 2025 NovaTrade Logistics · Gestión logística internacional"
-  data-en="©
+  data-en="© 2025 NovaTrade Logistics · International logistics management">
+  © 2025 NovaTrade Logistics · Gestión logística internacional
+</footer>
+
+<script>
+  function setLanguage(lang) {
+    document.querySelectorAll('[data-en]').forEach(el => {
+      if (lang === 'en') {
+        el.dataset.es = el.innerHTML;
+        el.innerHTML = el.dataset.en;
+      } else {
+        if (el.dataset.es) {
+          el.innerHTML = el.dataset.es;
+        }
+      }
+    });
+  }
+</script>
+
+</body>
+</html>
