--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
@@ -15,17 +19,17 @@
     }
 
     /* ===== MARCA DE AGUA ===== */
-    body::before {
-      content: "";
+    .watermark {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       background: url("logo-novatrade.png") no-repeat center;
-      background-size: 400px;
-      opacity: 0.04;
-      z-index: -1;
+      background-size: 420px;
+      opacity: 0.06;
+      pointer-events: none;
+      z-index: 0;
     }
 
     header {
@@ -36,7 +40,7 @@
       border-bottom: 1px solid #ddd;
       position: sticky;
       top: 0;
-      z-index: 100;
+      z-index: 10;
     }
 
     header img {
@@ -66,6 +70,8 @@
       max-width: 1000px;
       margin: 50px auto;
       padding: 0 20px;
+      position: relative;
+      z-index: 5;
     }
 
     section {
@@ -87,14 +93,19 @@
       font-size: 14px;
       color: #777;
       border-top: 1px solid #ddd;
+      position: relative;
+      z-index: 5;
     }
   </style>
 </head>
 
 <body>
 
+<!-- MARCA DE AGUA -->
+<div class="watermark"></div>
+
 <header>
-  <!-- LOGO PRINCIPAL -->
+  <!-- LOGO -->
   <img src="logo-novatrade.png" alt="NovaTrade Logistics">
 
   <nav>
