--- a/index.html
+++ b/index.html
@@ -18,18 +18,17 @@
       line-height: 1.6;
     }
 
-    /* ===== MARCA DE AGUA ===== */
+    /* ===== MARCA DE AGUA (VISIBLE) ===== */
     .watermark {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url("logo-novatrade.png") no-repeat center;
-      background-size: 420px;
-      opacity: 0.06;
+      inset: 0;
+      background-image: url("logo-novatrade.png");
+      background-repeat: repeat;
+      background-size: 280px;
+      background-position: center;
+      opacity: 0.08;
       pointer-events: none;
-      z-index: 0;
+      z-index: 1;
     }
 
     header {
@@ -105,7 +104,6 @@
 <div class="watermark"></div>
 
 <header>
-  <!-- LOGO -->
   <img src="logo-novatrade.png" alt="NovaTrade Logistics">
 
   <nav>
@@ -159,6 +157,11 @@
 </footer>
 
 <script>
+  // Forzar carga siempre arriba
+  window.onload = function () {
+    window.scrollTo(0, 0);
+  };
+
   function setLanguage(lang) {
     document.querySelectorAll('[data-en]').forEach(el => {
       if (lang === 'en') {
