--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
     <ul id="p2list">
       <li><strong>Gestión aduanera:</strong> Clasificación arancelaria, trámites de importación y exportación, cumplimiento normativo en Guatemala y Centroamérica.</li>
       <li><strong>Transporte internacional:</strong> Coordinación de envíos marítimos, aéreos y terrestres con cobertura global.</li>
-      <li><strong>Almacenaje y distribución:</strong> Manejo de inventarios, bodegas seguras y distribución eficiente.</li>
       <li><strong>Consultoría en comercio exterior:</strong> Asesoría en regulaciones, tratados comerciales y optimización de costos.</li>
-      <li><strong>Gestión documental:</strong> Preparación y control de documentos legales y corporativos para operaciones internacionales.</li>
+      <li><strong>Gestión documental:</strong> Control y administración de documentos logísticos como guías de transporte, certificados de origen, facturas comerciales y documentos de embarque, asegurando trazabilidad y eficiencia en cada operación.</li>
     </ul>
     <p id="p2b">
       Cada servicio está diseñado para ofrecer tranquilidad y confianza, permitiendo que nuestros clientes se concentren en el crecimiento de su negocio mientras nosotros nos encargamos de la logística.
@@ -182,12 +181,10 @@
     document.getElementById("p2list").innerHTML = `
       <li><strong>Customs management:</strong> Tariff classification, import/export procedures, regulatory compliance in Guatemala and Central America.</li>
       <li><strong>International transport:</strong> Coordination of maritime, air and land shipments with global coverage.</li>
-      <li><strong>Warehousing and distribution:</strong> Inventory management, secure warehouses and efficient distribution.</li>
       <li><strong>Foreign trade consulting:</strong> Advisory on regulations, trade agreements and cost optimization.</li>
-      <li><strong>Document management:</strong> Preparation and control of legal and corporate documents for international operations.</li>`;
+      <li><strong>Document management:</strong> Control and administration of logistics documents such as transport guides, certificates of origin, commercial invoices and shipping documents, ensuring traceability and efficiency in every operation.</li>`;
     document.getElementById("p2b").innerText = "Each service is designed to provide peace of mind and confidence, allowing our clients to focus on growing their business while we take care of logistics.";
 
     document.getElementById("t3").innerText = "About Us";
     document.getElementById("p3").innerText = "NovaTrade Logistics acts as your single point of contact for international logistics operations, offering professional advice and management.";
-    document.getElementById("p3b").innerText = "Our mission is to simplify international logistics, connecting markets and people through efficient and transparent processes. We believe in innovation, responsibility and excellence as fundamental pillars of our work.";
-    document.getElementById("p3c").innerText = "With years of experience in foreign trade and a
+    document.getElementById("p3b").innerText = "Our mission is to simplify international logistics, connecting markets and people through efficient and transparent processes. We believe
